Revert "gw:act sonar-fix."
This reverts commit 380367bfa1bb72da579120e5a149fec6ef912e41.

Revert "gw:act sonar-fix."

This reverts commit df69567c840cbfd78abde4346123b4a87b0e91e4.

Revert "gw:act sonar-fix."

This reverts commit 476740c05e4995dca4e6ef31ba27bd0fff81b7cd.

Revert "gw:act sonar-fix."

This reverts commit 74568e8d0bec69e35be66634efb7f3a6b6590dc4.